# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
)

# Aivika simulation example
haskell_binary(
    name = "aivika-example",
    srcs = [":Main.hs"],
    deps = [
        "//:base",
        "@stackage//:aivika",
        "@stackage//:mtl",
        "@stackage//:random",
    ],
) 