# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
)

# Aivika pendulum simulation
haskell_binary(
    name = "aivika-pendulum-sim",
    srcs = [":Main.hs"],
    deps = [
        "//:base",
        "@stackage//:aivika",
        "@stackage//:mtl",
        "@stackage//:optparse-applicative",
        "@stackage//:websockets",
        "@stackage//:aeson",
        "//:bytestring",
        "@stackage//:text",
    ],
    visibility = ["//visibility:public"],
)