# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
)

# Aivika population growth simulation
haskell_binary(
    name = "aivika-population-growth",
    srcs = [":Main.hs"],
    deps = [
        "//:base",
        "@stackage//:aivika",
        "@stackage//:mtl",
        "@stackage//:optparse-applicative",
        "@stackage//:websockets",
        "@stackage//:aeson",
        "@stackage//:bytestring",
        "@stackage//:text",
    ],
    visibility = ["//visibility:public"],
)