# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
)

# Calculator MCP Server that provides tools for basic arithmetic operations.
haskell_binary(
    name = "calculator-mcp",
    srcs = [
        ":Main.hs",
        ":Descriptions.hs",
        ":Types.hs",
    ],
    deps = [
        "//:base",
        "//haskell/libs/mcp-server",
        "@stackage//:text",
        "@stackage//:network-uri",
    ],
) 