# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
)

# Calculator MCP Server that provides tools for basic arithmetic operations.
haskell_binary(
    name = "calculator-mcp",
    srcs = [
        ":Descriptions.hs",
        ":Main.hs",
        ":Types.hs",
    ],
    deps = [
        "//:base",
        "//haskell/libs/mcp-server",
        "@stackage//:network-uri",
        "@stackage//:text",
    ],
)
