load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "langchain-example",
    srcs = ["Main.hs"],
    deps = [
        "//:base",
        "@stackage_alt//:aeson",
        "@stackage_alt//:bytestring",
        "@stackage_alt//:containers",
        "@stackage_alt//:http-conduit",
        "@stackage_alt//:langchain-hs",
        "@stackage_alt//:text",
        "@stackage_alt//:vector",
        "//:directory",
    ],
    visibility = ["//visibility:public"],
)
