# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
)

# Tic-tac-toe game application (console version)
haskell_binary(
    name = "tic-tac-toe",
    srcs = [":Main.hs", ":GameLogic.hs"],
    main_file = "Main.hs",
    deps = [
        "//:base",
        "@stackage//:mtl",
        "@stackage//:transformers",
    ],
)

